fix(userSpacePage.scss): fix `.masonry_grid_v2 .container` Page layout issue

--- a/src/styles/adaptedStyles/pages/userSpacePage.scss
+++ b/src/styles/adaptedStyles/pages/userSpacePage.scss
@@ -28,7 +28,7 @@
   }
 
   .masonry_grid_v2 .container {
-    position: static;
+    position: relative;
   }
 
   .comment-bilibili-mask {
